# brain-mkt

./: .env.example  .gitignore  INICIAL4.md  INITIAL.md  INITIAL2.md  README.md  RESUMEN-EJECUTIVO.md  docker-compose.yml
.cursor/commands/: generate-prp-v3-es.md
.serena/: project.yml
.serena/memories/: code_style.md  project_purpose.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
Context-Engineering-Intro/validation/: ultimate_validate_command.md
PRPs/: book-learning-system-v3.md  marketing-brain-conversational-agent-v3.md  marketing-brain-system-v3.md  marketing-brain-video-generation-v3.md  query-decomposition-v3.md
PRPs/templates/: prp_base_nuevo.md
backend/: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  run.py
backend/db/: 001_initial_schema.sql  002_add_user_document_summary.sql  003_book_learning_system.sql
backend/docs/: STREAMING_API.md
backend/scripts/: ingest_training_data.py  test_semantic_search.py  test_streaming_endpoint.sh
backend/src/: main.py
backend/src/agents/: __init__.py  base_agent.py  buyer_persona_agent.py  content_generator_agent.py  router_agent.py
backend/src/api/: analysis.py  auth.py  chat.py  documents.py  knowledge.py
backend/src/db/: database.py  models.py
backend/src/middleware/: auth.py
backend/src/schemas/: analysis.py  auth.py  chat.py  documents.py  knowledge.py
backend/src/services/: book_learning_service.py  chat_service.py  document_processor.py  embedding_service.py  llm_service.py  memory_manager.py  query_decomposer.py  rag_service.py  result_combiner.py
backend/src/utils/: file_parsers.py  jwt.py  password.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_chat.py  test_memory.py
backend/tests/unit/: test_query_decomposer.py  test_result_combiner.py
contenido/: buyer-plantilla.md  prompts-mejorados-v2.md  promts_borradores.md
docs/: DIAGNOSTICO_MEMORIA_Y_CONTEXTO.md  EJECUTAR_PROYECTO.md  INTEGRATION_ANALYSIS.md  TAREAS_PENDIENTES_Y_GOTCHAS.md  explicacion-contexto.md  gotchas-detallados-y-soluciones.md  qa-plan3-tecnicas-aplicadas.md  supabase-self-hosted-setup.md
frontend/: .env.example  Dockerfile  README.md  middleware.ts  package-lock.json  package.json  test-auth-flow.sh
mcp-marketing-brain/: Dockerfile  pyproject.toml
mcp-marketing-brain/src/: server.py
(+26 files in other folders)
